--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,9 @@
 --- 
 abstract: Examining Attributes of a user
-author: Kevin Falcone  C<< <falcone@bestpractical.com> >>
+author: 
+  - Kevin Falcone  C<< <falcone@bestpractical.com> >>
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.680
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
