--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,25 @@
---- 
-abstract: Examining Attributes of a user
-author: 
-  - Kevin Falcone  C<< <falcone@bestpractical.com> >>
+---
+abstract: 'Examining Attributes of a user'
+author:
+  - 'Kevin Falcone  C<< <falcone@bestpractical.com> >>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: Module::Install version 0.680
+generated_by: 'Module::Install version 0.91'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: RT-Extension-AttributeWalker
-no_index: 
-  directory: 
-    - bin
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   RT: 0
   Test::More: 0
+resources:
+  license: http://dev.perl.org/licenses/
 version: 0.02
